--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "canvas": "^3.0.1",
-    "express": "^4.17.1",
+    "express": "^4.21.2",
+    "express-winston": "^4.2.0",
     "gifencoder": "^2.0.1",
     "multer": "^1.4.2",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
